--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nextra-docs-template",
+  "name": "data-room-docs",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Data Room Documentation",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start"
   },
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
-    "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "next": "^14.0.0",
+    "nextra": "^3.0.0",
+    "nextra-theme-docs": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
