--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "installCommand": "pnpm install --no-frozen-lockfile",
-  "buildCommand": "pnpm build"
+  "installCommand": "npm install",
+  "buildCommand": "npm run build"
 }
